--- a/backend/email/deployment.yaml
+++ b/backend/email/deployment.yaml
@@ -93,13 +93,16 @@ spec:
       volumes:
         - name: email-logs
           hostPath:
-            path: /Users/ijehyeon/server/email/log
+            # path: /Users/ijehyeon/server/email/log
+            path: /c/Users/pil48/server/email/log
         - name: email-mysql-master-data
           hostPath:
-            path: /Users/ijehyeon/server/email/backend/mysql/master
+            # path: /Users/ijehyeon/server/email/backend/mysql/master
+            path: /c/Users/pil48/server/email/log
         - name: email-redis-data
           hostPath:
-            path: /Users/ijehyeon/server/email/backend/redis/data
+            # path: /Users/ijehyeon/server/email/backend/redis/data
+            path: /c/Users/pil48/server/email/log
 
 ---
 apiVersion: v1
