--- a/backend/user/deployment.yaml
+++ b/backend/user/deployment.yaml
@@ -22,8 +22,8 @@ spec:
       containers:
         - name: nestjs-container
           image: 192.168.0.212:5555/user:20231011-003539
-          # command: ["/bin/sh", "-c"]
-          # args: ["./node_modules/.bin/ts-node -P /usr/src/main/tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d /usr/src/main/dist/data-source.js"]
+          command: ["/bin/sh", "-c"]
+          args: ["./node_modules/.bin/ts-node -P /usr/src/main/tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d /usr/src/main/dist/data-source.js"]
           ports:
             - containerPort: 3001
           volumeMounts:
