--- a/backend/email/deployment.yaml
+++ b/backend/email/deployment.yaml
@@ -21,7 +21,9 @@ spec:
     spec:
       containers:
         - name: nestjs-container
-          image: 192.168.0.212:5555/email:20231011-001055
+          image: 192.168.0.212:5555/email:20231012-052411
+          command: ["/bin/bash"]
+          args: ["entrypoint.sh"]
           # command: ["/bin/sh", "-c"]
           # args: ["./node_modules/.bin/ts-node -P /usr/src/main/tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d /usr/src/main/dist/data-source.js"]
           ports:
