--- a/backend/user/deployment.yaml
+++ b/backend/user/deployment.yaml
@@ -22,8 +22,8 @@ spec:
       containers:
         - name: nestjs-container
           image: 192.168.0.212:5555/user:20231012-050246
-          command: ["/bin/bash"]
-          args: ["/usr/src/main/entrypoint.sh"]
+          # command: ["/bin/bash"]
+          # args: ["/usr/src/main/entrypoint.sh"]
           # command: ["/bin/sh", "-c"]
           # args: ["./node_modules/.bin/ts-node -P /usr/src/main/tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d /usr/src/main/dist/data-source.js"]
           ports:
@@ -64,7 +64,7 @@ spec:
             - containerPort: 80
           env:
             - name: PMA_HOST
-              value: "user-mysql-master-service"  # Use service name for DB host
+              value: "user-mysql-master-service" # Use service name for DB host
             - name: PMA_PORT
               value: "3306"
             - name: PMA_USER
@@ -100,12 +100,11 @@ spec:
       targetPort: 3001
   type: NodePort
 
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: user-mysql-master-service  # Service for the mysql-master-container
+  name: user-mysql-master-service # Service for the mysql-master-container
   namespace: prod
 spec:
   selector:
@@ -114,7 +113,6 @@ spec:
     - protocol: TCP
       port: 3306
       targetPort: 3306
-
 
 ---
 apiVersion: v1
@@ -142,12 +140,12 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - http:
-      paths:
-      - path: /phpmyadmin-user(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: user-phpmyadmin-service
-            port:
-              number: 3080
+    - http:
+        paths:
+          - path: /phpmyadmin-user(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: user-phpmyadmin-service
+                port:
+                  number: 3080
