--- a/backend/email/deployment.yaml
+++ b/backend/email/deployment.yaml
@@ -94,7 +94,15 @@ spec:
 
         - name: redis-slave-container
           image: 192.168.0.212:5555/redis:latest
-          command: ["redis-server", "--slaveof", "user-redis-service", "6379"]
+          command:
+            [
+              "redis-server",
+              "--port",
+              "6380",
+              "--slaveof",
+              "user-redis-service",
+              "6379",
+            ]
           env:
             - name: REDIS_REPLICATION_MODE
               value: "slave"
