--- a/backend/email/deployment.yaml
+++ b/backend/email/deployment.yaml
@@ -22,8 +22,8 @@ spec:
       containers:
         - name: nestjs-container
           image: 192.168.0.212:5555/email:20231108-222213
-          command: ["/bin/bash"]
-          args: ["/usr/src/main/entrypoint.sh"]
+          # command: ["/bin/bash"]
+          # args: ["/usr/src/main/entrypoint.sh"]
           # command: ["/bin/sh", "-c"]
           # args: ["./node_modules/.bin/ts-node -P /usr/src/main/tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d /usr/src/main/dist/data-source.js"]
           ports:
@@ -92,44 +92,44 @@ spec:
             - name: PASSWORD
               value: testtest
 
-        # - name: redis-slave-container
-        #   image: 192.168.0.212:5555/redis:latest
-        #   command:
-        #     [
-        #       "redis-server",
-        #       "--port",
-        #       "6380",
-        #       "--slaveof",
-        #       "user-redis-service",
-        #       "6379",
-        #     ]
-        #   env:
-        #     - name: REDIS_REPLICATION_MODE
-        #       value: "slave"
-        #     - name: REDIS_MASTER_SERVICE
-        #       value: "user-redis-service"
-        #     - name: REDIS_MASTER_PORT_NUMBER
-        #       value: "6379"
-        #   ports:
-        #     - containerPort: 6380
-        #   volumeMounts:
-        #     - name: email-slave-redis-data
-        #       mountPath: /data
+        - name: redis-slave-container
+          image: 192.168.0.212:5555/redis:latest
+          command:
+            [
+              "redis-server",
+              "--port",
+              "6380",
+              "--slaveof",
+              "user-redis-service",
+              "6379",
+            ]
+          env:
+            - name: REDIS_REPLICATION_MODE
+              value: "slave"
+            - name: REDIS_MASTER_SERVICE
+              value: "user-redis-service"
+            - name: REDIS_MASTER_PORT_NUMBER
+              value: "6379"
+          ports:
+            - containerPort: 6380
+          volumeMounts:
+            - name: email-slave-redis-data
+              mountPath: /data
 
-        # - name: redis-slave-gui-container
-        #   image: 192.168.0.212:5555/rediscommander/redis-commander:latest
-        #   # command: ["redis-commander", "--redis-port", "8082"]
-        #   ports:
-        #     - containerPort: 8082
-        #   env:
-        #     - name: REDIS_HOSTS
-        #       value: "email-slave-redis-service"
-        #     - name: PORT
-        #       value: "8082"
-        #     - name: USER
-        #       value: admin
-        #     - name: PASSWORD
-        #       value: testtest
+        - name: redis-slave-gui-container
+          image: 192.168.0.212:5555/rediscommander/redis-commander:latest
+          # command: ["redis-commander", "--redis-port", "8082"]
+          ports:
+            - containerPort: 8082
+          env:
+            - name: REDIS_HOSTS
+              value: "local:localhost:6380"
+            - name: PORT
+              value: "8082"
+            - name: USER
+              value: admin
+            - name: PASSWORD
+              value: testtest
 
       volumes:
         - name: email-logs
@@ -156,6 +156,7 @@ spec:
           # hostPath:
           # path: /Users/ijehyeon/server/email/backend/redis/slave/data
           # type: DirectoryOrCreate
+
 ---
 apiVersion: v1
 kind: Service
