--- a/helm/templates/room/deployment.yaml
+++ b/helm/templates/room/deployment.yaml
@@ -20,6 +20,7 @@ spec:
           args: ["/usr/src/main/entrypoint.sh"]
           ports:
             - containerPort: 3006
+          volumeMounts:
             - name: room-logs
               mountPath: /usr/src/main/logs
           env:
