--- a/helm/templates/room/service.yaml
+++ b/helm/templates/room/service.yaml
@@ -27,20 +27,20 @@ spec:
       port: 3306
       targetPort: 3306
 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: room-phpmyadmin-service
-  namespace: prod
-spec:
-  selector:
-    app: room
-  ports:
-    - protocol: TCP
-      port: 3080
-      targetPort: 8080
-  type: NodePort
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: room-phpmyadmin-service
+#   namespace: prod
+# spec:
+#   selector:
+#     app: room
+#   ports:
+#     - protocol: TCP
+#       port: 3080
+#       targetPort: 80
+#   type: NodePort
 
 ---
 apiVersion: v1
