--- a/helm/templates/room/ingress.yaml
+++ b/helm/templates/room/ingress.yaml
@@ -1,3 +1,25 @@
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: room-ingress
+  namespace: prod
+  annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+spec:
+  ingressClassName: nginx
+  rules:
+    - http:
+        paths:
+          - path: /room(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: room-service
+                port:
+                  number: 3006
+
 # ---
 # apiVersion: networking.k8s.io/v1
 # kind: Ingress
