--- a/helm/templates/room/ingress.yaml
+++ b/helm/templates/room/ingress.yaml
@@ -16,9 +16,9 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: room-service
+                name: room-socket-service
                 port:
-                  number: 3006
+                  number: 80
 
 # ---
 # apiVersion: networking.k8s.io/v1
