--- a/helm/templates/room/service.yaml
+++ b/helm/templates/room/service.yaml
@@ -17,6 +17,21 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: room-socket-service
+  namespace: prod
+spec:
+  selector:
+    app: room
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3006
+  type: NodePort
+
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: room-mysql-master-service 
   namespace: prod
 spec:
