--- a/helm/templates/room/service.yaml
+++ b/helm/templates/room/service.yaml
@@ -41,7 +41,8 @@ spec:
     - protocol: TCP
       port: 3306
       targetPort: 3306
-
+  type: NodePort
+  
 # ---
 # apiVersion: v1
 # kind: Service
