--- a/helm/templates/room/ingress.yaml
+++ b/helm/templates/room/ingress.yaml
@@ -24,27 +24,27 @@ spec:
                 port:
                   number: 3006
 
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: room-phpmyadmin-ingress
-#   namespace: prod
-#   annotations:
-#     nginx.ingress.kubernetes.io/use-regex: "true"
-#     nginx.ingress.kubernetes.io/rewrite-target: /$2
-# spec:
-#   ingressClassName: nginx
-#   rules:
-#     - http:
-#         paths:
-#           - path: /phpmyadmin-room(/|$)(.*)
-#             pathType: ImplementationSpecific
-#             backend:
-#               service:
-#                 name: room-phpmyadmin-service
-#                 port:
-#                   number: 3080
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: room-phpmyadmin-ingress
+  namespace: prod
+  annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+spec:
+  ingressClassName: nginx
+  rules:
+    - http:
+        paths:
+          - path: /phpmyadmin-room(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: room-phpmyadmin-service
+                port:
+                  number: 3080
 
 ---
 apiVersion: networking.k8s.io/v1
