--- a/helm/templates/room/service.yaml
+++ b/helm/templates/room/service.yaml
@@ -11,22 +11,7 @@ spec:
     - protocol: TCP
       port: 3006
       targetPort: 3006
-  type: NodePort
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: room-socket-service
-  namespace: prod
-spec:
-  selector:
-    app: room
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3006
-  type: NodePort
+  type: NodePorts
 
 ---
 apiVersion: v1
@@ -43,20 +28,20 @@ spec:
       targetPort: 3306
   type: NodePort
   
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: room-phpmyadmin-service
-#   namespace: prod
-# spec:
-#   selector:
-#     app: room
-#   ports:
-#     - protocol: TCP
-#       port: 3080
-#       targetPort: 80
-#   type: NodePort
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: room-phpmyadmin-service
+  namespace: prod
+spec:
+  selector:
+    app: room
+  ports:
+    - protocol: TCP
+      port: 3080
+      targetPort: 80
+  type: NodePort
 
 ---
 apiVersion: v1
