--- a/helm/templates/room/ingress.yaml
+++ b/helm/templates/room/ingress.yaml
@@ -20,7 +20,7 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: room-socket-service
+                name: room-service
                 port:
                   number: 3006
 
