--- a/helm/templates/room/ingress.yaml
+++ b/helm/templates/room/ingress.yaml
@@ -20,9 +20,9 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: room-service
+                name: room-socket-service
                 port:
-                  number: 3006
+                  number: 3100
 
 ---
 apiVersion: networking.k8s.io/v1
