--- a/helm/templates/orchestrator/ingress.yaml
+++ b/helm/templates/orchestrator/ingress.yaml
@@ -7,6 +7,28 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+spec:
+  ingressClassName: nginx
+  rules:
+    - http:
+        paths:
+          - path: /orchestrator(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: orchestrator-service
+                port:
+                  number: 3000
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: orchestrator-socket-ingress
+  namespace: prod
+  annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
     nginx.ingress.kubernetes.io/upgrade: "websocket"
@@ -27,13 +49,13 @@ spec:
   rules:
     - http:
         paths:
-          - path: /orchestrator(/|$)(.*)
+          - path: /orchestrator-socket(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
               service:
-                name: orchestrator-service
+                name: orchestrator-socket-service
                 port:
-                  number: 3000
+                  number: 3100
 
 ---
 apiVersion: networking.k8s.io/v1
